tabernacle/terraform/base/gce_topdrawer_old/main.tf
variable "ssh_user" {}

variable "ssh_private_key" {}

variable "account_file" {}

variable "gce_project" {}

variable "region" {}

variable "network" {}

variable "bucket_location" {}

variable "zone" {}

variable "vpn_image" {}

variable "amigo_server_image" {}

variable "kafka_image" {}

variable "db_image" {}

variable "es_image" {}

variable "log_image" {}

variable "phoenix_image" {}

variable "service_worker_image" {}

variable "service_workers" {}

variable "greenriver_image" {}

variable "front_image" {}

variable "front_workers" {}

variable "stage_backend_image" {}

variable "stage_frontend_image" {}

variable "stage_amigo_server_image" {}

provider "google" {
  credentials = "${file(var.account_file)}"
  project     = "${var.gce_project}"
  region      = "${var.region}"
}

##############################################
# Network
##############################################

resource "google_compute_network" "topdrawer" {
  name       = "${var.network}"
  ipv4_range = "10.0.0.0/16"
}

resource "google_compute_firewall" "topdrawer_web" {
  name    = "${var.network}-web"
  network = "${var.network}"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["http-server", "https-server"]
}

resource "google_compute_firewall" "topdrawer_ssh" {
  name    = "${var.network}-ssh"
  network = "${var.network}"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["ssh"]
}

resource "google_compute_firewall" "topdrawer_internal" {
  name    = "${var.network}-internal"
  network = "${var.network}"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["1-65535"]
  }

  allow {
    protocol = "udp"
    ports    = ["1-65535"]
  }

  source_ranges = ["10.0.0.0/16"]
}

##############################################
# Vpn
##############################################
module "topdrawer_vpn" {
  source  = "../../modules/gce/vpn"
  image   = "${var.vpn_image}"
  network = "${google_compute_network.topdrawer.name}"
}
